<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kamatcho.example.androidinterview.FrontPage"
    tools:showIn="@layout/front_page"
    >


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Simple_Question"
        android:id="@+id/Simple"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="ChangePage"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tough_Question"
        android:id="@+id/Tough"
        android:layout_below="@+id/Simple"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:onClick="ChangePage"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/See_Our_Other_App"
        android:id="@+id/See"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="ChangePage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rate_This_App"
        android:id="@+id/Rate"
        android:layout_below="@+id/See"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:onClick="ChangePage"/>
</RelativeLayout>
